# foundry

./: .gitignore  plan_documents.md
ai_product_company/: README.md  crew.jsonc  pyproject.toml  requirements.txt
ai_product_company/agents/: product_manager.jsonc  quality_reviewer.jsonc  system_architect.jsonc  technical_writer.jsonc
ai_product_company/schemas/: product_requirements.py
ai_product_company/scripts/: validate_product_requirements.py
ai_product_company/src/ai_product_company/: crew.py  main.py
ai_product_company/src/ai_product_company/config/: agents.yaml  tasks.yaml
ai_product_company/src/ai_product_company/tools/: tech_research_tool.py
schemas/: product_requirements.py
scripts/: validate_product_requirements.py
