[project]
name = "ai_product_company"
version = "0.1.0"
description = "ai_product_company using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]>=1.15.4,<2.0.0"
]

[project.scripts]
run_crew = "ai_product_company.main:run"
train = "ai_product_company.main:train"
replay = "ai_product_company.main:replay"
test = "ai_product_company.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_product_company"]
only-include = ["src/ai_product_company", "knowledge", "skills", "schemas", "scripts"]

[tool.crewai]
type = "crew"
